force-app/main/default/objects/RelationshipContact__c/RelationshipContact__c.object-meta.xml
<CustomObject>
    <label>Relationship Contact</label>
    <nameField>
        <label>Relationship Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RelationshipContact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>