force-app/main/default/objects/RelationshipContact__c/fields/Attitude__c.field-meta.xml
<CustomField>
    <fullName>Attitude__c</fullName>
    <label>Attitude</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supportive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Opposed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>