force-app/main/default/objects/RelationshipContact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RelationshipContact</relationshipLabel>
    <relationshipName>RelationshipContact</relationshipName>
    <type>Lookup</type>
</CustomField>