force-app/main/default/objects/RelationshipContact__c/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architect Firm - Primarly Team</fullName>
            </value>
            <value>
                <fullName>Architect Firm - Secondary Team</fullName>
            </value>
            <value>
                <fullName>Competitor (dealer)</fullName>
            </value>
            <value>
                <fullName>Competitor (manufacturer)</fullName>
            </value>
            <value>
                <fullName>Construction Manager</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Control Contractor (Div 25)</fullName>
            </value>
            <value>
                <fullName>Control Engineer (Div 25)</fullName>
            </value>
            <value>
                <fullName>Dealer of Altex</fullName>
            </value>
            <value>
                <fullName>Design-Build Contractor</fullName>
            </value>
            <value>
                <fullName>Designer Firm</fullName>
            </value>
            <value>
                <fullName>Developer,</fullName>
            </value>
            <value>
                <fullName>Developer/Contractor,</fullName>
            </value>
            <value>
                <fullName>Electrical Engineer (Div 26)</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>General Contractor (GC)</fullName>
            </value>
            <value>
                <fullName>Installation company</fullName>
            </value>
            <value>
                <fullName>Mechanical Engineer</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>PDC Team (when P3 project)</fullName>
            </value>
            <value>
                <fullName>Spec writter Firm</fullName>
            </value>
            <value>
                <fullName>Sub-Contractor</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>