force-app/main/default/objects/RelationshipContact__c/fields/ContactRole__c.field-meta.xml
<CustomField>
    <fullName>ContactRole__c</fullName>
    <label>ContactRole</label>
    <length>255</length>
    <type>Text</type>
</CustomField>