force-app/main/default/objects/RelationshipContact__c/fields/Project_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Project_Relationship__c</fullName>
    <label>Project Relationship</label>
    <referenceTo>Project_Relationships__c</referenceTo>
    <relationshipLabel>RelationshipContact</relationshipLabel>
    <relationshipName>Relationship_Contact</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>